dark gradient working on Safari/iPad. Fixes issue #364

--- a/pylowiki/public/styles/civ.css
+++ b/pylowiki/public/styles/civ.css
@@ -1978,7 +1978,7 @@ text-align: right;
   left: 0;
   height: 100%;
   width: 100%;
-  z-index: -1;
+  z-index: 0;
   background-image: -o-linear-gradient(bottom, rgba(0,0,0,0), rgba(0,0,0,0.2) 50%);
   background-image: -moz-linear-gradient(bottom, rgba(0,0,0,0), rgba(0,0,0,0.2) 50%);
   background-image: -webkit-gradient(linear, left bottom, left top, color-stop(rgba(0,0,0,0)), color-stop(0.5, rgba(0,0,0,0.2)));
@@ -2002,13 +2002,22 @@ text-align: right;
   left: 0;
   height: 100%;
   width: 100%;
-  z-index: -1;
+  z-index: 0;
   background-image: -o-linear-gradient(bottom, rgba(0,0,0,0), rgba(0,0,0,0.8) 90%);
   background-image: -moz-linear-gradient(bottom, rgba(0,0,0,0), rgba(0,0,0,0.8) 90%);
   background-image: -webkit-gradient(linear, left bottom, left top, color-stop(rgba(0,0,0,0)), color-stop(0.9, rgba(0,0,0,0.8)));
   background-image: -webkit-linear-gradient(bottom, rgba(0,0,0,0), rgba(0,0,0,0.8) 90%);
   background-image: -ms-linear-gradient(bottom, rgba(0,0,0,0), rgba(0,0,0,0.8) 90%);
   background-image: linear-gradient(bottom, rgba(0,0,0,0), rgba(0,0,0,0.8) 90%);
+    /* IE 5.5 - 7 */
+  filter: progid:DXImageTransform.Microsoft.gradient(
+    gradientType=1, startColor=#000000, endColorStr=0
+  );
+
+  /* IE8 uses -ms-filter for whatever reason... */
+  -ms-filter: progid:DXImageTransform.Microsoft.gradient(
+    gradientType=1, startColor=#000000, endColoStr=0
+  );
 }
 
 .dark-gradient{
@@ -2844,4 +2853,9 @@ a.no-highlight:hover{
 
 .help-text.error{
   color: #b94a48
+}
+
+.one-up{
+  position: relative;
+  z-index: 1;
 }
